docs/pages/versions/v55.0.0/sdk/ui/jetpack-compose/iconbutton.mdx
---
title: IconButton
description: 用于显示原生 Material3 图标按钮的 Jetpack Compose IconButton 组件。
sourceCodeUrl: 'https://github.com/expo/expo/tree/main/packages/expo-ui'
packageName: '@expo/ui'
platforms: ['android']
---

import APISection from '~/components/plugins/APISection';
import { APIInstallSection } from '~/components/plugins/InstallSection';

Expo UI 提供四个图标按钮组件，与官方 Jetpack Compose [IconButton API](https://developer.android.com/develop/ui/compose/components/icon-button) 保持一致：`IconButton`、`FilledIconButton`、`FilledTonalIconButton` 和 `OutlinedIconButton`。所有变体共享相同的 props，并接受可组合的子元素作为内容。

## 安装

<APIInstallSection />

## 用法

### 基本图标按钮

一个没有背景的标准图标按钮，通常用于工具栏操作。

```tsx BasicIconButtonExample.tsx
import { Host, IconButton, Icon } from '@expo/ui/jetpack-compose';

export default function BasicIconButtonExample() {
  return (
    <Host matchContents>
      <IconButton onClick={() => alert('已按下！')}>
        <Icon source={require('./assets/settings.xml')} size={24} />
      </IconButton>
    </Host>
  );
}
```

### 图标按钮变体

使用不同的图标按钮组件来传达不同程度的强调。

```tsx IconButtonVariantsExample.tsx
import {
  Host,
  IconButton,
  FilledIconButton,
  FilledTonalIconButton,
  OutlinedIconButton,
  Icon,
  Row,
} from '@expo/ui/jetpack-compose';

export default function IconButtonVariantsExample() {
  return (
    <Host matchContents>
      <Row horizontalArrangement={{ spacedBy: 8 }}>
        <IconButton onClick={() => {}}>
          <Icon source={require('./assets/star.xml')} size={24} />
        </IconButton>
        <FilledIconButton onClick={() => {}}>
          <Icon source={require('./assets/star.xml')} size={24} />
        </FilledIconButton>
        <FilledTonalIconButton onClick={() => {}}>
          <Icon source={require('./assets/star.xml')} size={24} />
        </FilledTonalIconButton>
        <OutlinedIconButton onClick={() => {}}>
          <Icon source={require('./assets/star.xml')} size={24} />
        </OutlinedIconButton>
      </Row>
    </Host>
  );
}
```

## API

```tsx
import {
  IconButton,
  FilledIconButton,
  FilledTonalIconButton,
  OutlinedIconButton,
} from '@expo/ui/jetpack-compose';
```

<APISection packageName="expo-ui/jetpack-compose/iconbutton" apiName="IconButton" />
